# web3-voice

./: .vercelignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vercel.json
backend/: .env.example  README.md  index.js  package-lock.json  package.json
backend/routes/: ai.js  ipfs.js  near.js
contracts/: Cargo.toml  DEPLOYMENT_SUMMARY.md  README.md  verify-deployment.sh
contracts/dao/: Cargo.toml
contracts/dao/src/: lib.rs
contracts/marketplace/: Cargo.toml
contracts/marketplace/src/: lib.rs
contracts/orchestrator/: Cargo.toml
contracts/orchestrator/src/: lib.rs
contracts/src/: dao.rs  lib.rs  voice_nft.rs  voice_token.rs
contracts/voice_nft/: Cargo.toml
contracts/voice_nft/src/: lib.rs
contracts/voice_token/: Cargo.toml
contracts/voice_token/src/: lib.rs
public/: manifest.json
src/: App.tsx  api.js  index.css
src/components/: AppSidebar.tsx  DashboardLayout.tsx
src/pages/: Analytics.tsx  DAOs.tsx  Dashboard.tsx  Marketplace.tsx  MintStudio.tsx  Settings.tsx  VoiceVault.tsx
