[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { version = "5.6.0", features = ["legacy"] }
serde = { version = "1.0", features = ["derive"] }
borsh = { version = "1.5", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"

[dev-dependencies]
near-sdk = { version = "5.6.0", features = ["unit-testing"] }
near-workspaces = { version = "0.20", features = ["unstable"] }
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1"
